--- a/HaRepacker/packages.config
+++ b/HaRepacker/packages.config
@@ -2,7 +2,11 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net47" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="NAudio" version="1.8.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="WeifenLuo.WinFormsUI.Docking" version="2.1.0" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net472" />
 </packages>
