--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -163,7 +163,11 @@
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="ContextMenuManager.cs" />
     <Compile Include="Converter\BitmapToImageSource.cs" />
+    <Compile Include="Converter\CheckboxToVisibilityConverter.cs" />
     <Compile Include="Converter\ImageSizeDoubleToIntegerConverter.cs" />
+    <Compile Include="Converter\ImageWidthOrHeightToScreenDPIConverter.cs" />
+    <Compile Include="Converter\PointFOriginToStringConverter.cs" />
+    <Compile Include="Converter\VectorOriginPointFToMarginConverter.cs" />
     <Compile Include="FHMapper\FHMapper.cs" />
     <Compile Include="GUI\AboutForm.cs">
       <SubType>Form</SubType>
@@ -372,6 +376,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UndoRedoManager.cs" />
+    <Compile Include="Utils\ScreenDPI.cs" />
     <Compile Include="Warning.cs" />
     <Compile Include="WzFileManager.cs" />
     <Compile Include="GUI\WzStringSearchForm.cs">
@@ -743,6 +748,7 @@
     <Resource Include="Resources\loading.gif" />
     <None Include="Resources\expand.png" />
     <None Include="Resources\collapse.png" />
+    <None Include="Resources\ladyboss_test_attack2_0.png" />
     <Content Include="Resources\OrangeMushroom\orangeMushroom_Jump.gif" />
     <Content Include="Resources\OrangeMushroom\orangeMushroom_Stand.gif" />
     <Content Include="Resources\Pause.png" />
