--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -57,14 +57,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>HaLogo.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>HaRepacker.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <Win32Resource>HaRepacker.res</Win32Resource>
+    <Win32Resource>
+    </Win32Resource>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -370,8 +370,6 @@
     <Compile Include="Configuration\ApplicationSettings.cs" />
     <Compile Include="Configuration\UserSettings.cs" />
     <Compile Include="SharpApng.cs" />
-    <Compile Include="Spine\SpriteBatchItem.cs" />
-    <Compile Include="Spine\VertexPositionColorTexture.cs" />
     <Compile Include="TreeViewMS.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -739,6 +737,7 @@
     <None Include="Resources\Play.png" />
     <None Include="Resources\207px-Circle-undo.svg.png" />
     <None Include="Resources\8800000_attack_10.png" />
+    <Content Include="HaLogo.ico" />
     <Content Include="Resources\arrow_left.png" />
     <None Include="Resources\red_x1.png" />
     <None Include="Resources\rename.png" />
