--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -808,6 +808,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HaLogo.ico" />
+    <None Include="Resources\placeholder.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
