[UI] Include the status of bruteforcing keys

--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -165,8 +165,10 @@
     <Compile Include="Converter\CheckboxToVisibilityConverter.cs" />
     <Compile Include="Converter\ImageSizeDoubleToIntegerConverter.cs" />
     <Compile Include="Converter\ImageWidthOrHeightToScreenDPIConverter.cs" />
+    <Compile Include="Converter\IntegerULongCommasConverter.cs" />
     <Compile Include="Converter\PointFOriginToStringConverter.cs" />
     <Compile Include="Converter\PointFToVisiblityConverter.cs" />
+    <Compile Include="Converter\TicksToRelativeTimeConverter.cs" />
     <Compile Include="Converter\VectorOriginPointFToMarginConverter.cs" />
     <Compile Include="FHMapper\FHMapper.cs" />
     <Compile Include="GUI\AboutForm.cs">
