--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -808,6 +808,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HaLogo.ico" />
+    <Content Include="HaLogo\%24this.Icon.ico" />
+    <Content Include="HaLogo\HaLogo.ico" />
+    <Content Include="HaLogo\HaLogo.svg" />
+    <Content Include="HaLogo\HaLogo128.png" />
+    <Content Include="HaLogo\HaLogo16.png" />
+    <Content Include="HaLogo\HaLogo256.png" />
+    <Content Include="HaLogo\HaLogo32.png" />
+    <Content Include="HaLogo\HaLogo48.png" />
+    <Content Include="HaLogo\HaLogo512.png" />
+    <Content Include="HaLogo\HaLogo64.png" />
     <None Include="Resources\placeholder.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
