--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "spine-runtimes"]
 	path = spine-runtimes
-	url = https://github.com/EsotericSoftware/spine-runtimes.git
+	url = https://github.com/EsotericSoftware/spine-runtimes
