--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -152,6 +152,9 @@
     <Compile Include="CustomControls\HaList.xaml.cs">
       <DependentUpon>HaList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomControls\WatermarkTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Exceptions\DeserializationException.cs" />
     <Compile Include="Exceptions\NameAlreadyUsedException.cs" />
     <Compile Include="GUI\Etc\ChangeableTextBox.xaml.cs">
@@ -249,6 +252,12 @@
     </Compile>
     <Compile Include="GUI\LayerChange.Designer.cs">
       <DependentUpon>LayerChange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\LoadMapSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\LoadMapSelector.designer.cs">
+      <DependentUpon>LoadMapSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\ManageUserObjects.cs">
       <SubType>Form</SubType>
@@ -652,6 +661,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\LayerChange.resx">
       <DependentUpon>LayerChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\LoadMapSelector.resx">
+      <DependentUpon>LoadMapSelector.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Load.resx">
       <DependentUpon>Load.cs</DependentUpon>
